--- a/index.html
+++ b/index.html
@@ -9,17 +9,43 @@
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <script type="text/javascript" src="jquery.js"></script>
 </head>
 
 <script>
 
   let sum = 0;
   let tempSum = 0;
-  let n = 9;
+  let n = 64;
   let score = (n*(n+1))/2;
   let availableNums = Array(n).fill(true);
   let usedNums = Array(n).fill(false);
   let selectedNums = Array(n).fill(false);
+
+  const TOTAL_WIDTH_IN_PIXELS = 360;
+
+  const setupNumButtons = function() {
+    const numRows = Math.ceil(Math.sqrt(n));
+    const numCols = Math.floor(Math.sqrt(n));
+    const cellWidth = TOTAL_WIDTH_IN_PIXELS / numCols;
+    const cellHeight = cellWidth;
+    const numbersWrapper = document.getElementById("numbersWrapper");
+    numbersWrapper.style.height = (cellHeight * numRows).toString() + "px";
+    numbersWrapper.style.width = TOTAL_WIDTH_IN_PIXELS.toString() + "px";
+    for (let num = 0; num < n; num++) {
+      const numString = (num+1).toString();
+      const cellNode = document.createElement("div");
+      cellNode.id = "button" + numString;
+      cellNode.classList.add("numberButton");
+      cellNode.setAttribute("onclick", "selectNumber(" + numString + ")");
+      cellNode.innerHTML = numString;
+      cellNode.style.width = (cellWidth * 0.8).toString() + "px";
+      cellNode.style.height = (cellWidth * 0.8).toString() + "px";
+      cellNode.style.marginTop = (cellWidth * 0.2).toString() + "px";
+      cellNode.style.marginLeft = (cellWidth * 0.2).toString() + "px";
+      numbersWrapper.appendChild(cellNode);
+    }
+  };
 
   const rollDice = function() {
     if (sum != tempSum) {
@@ -236,7 +262,7 @@
   });
 
   const main = function() {
-    console.log(availableNums.every((x) => x));
+    setupNumButtons();
     rollDice();
   };
 
@@ -247,17 +273,7 @@
   
   <div id="instructions"></div>
   <div id="gameWrapper" class="wrapper">
-    <div id="numbersWrapper" class="wrapper">
-      <div id="button1" class="numberButton" onclick="selectNumber(1)">1</div>
-      <div id="button2" class="numberButton" onclick="selectNumber(2)">2</div>
-      <div id="button3" class="numberButton" onclick="selectNumber(3)">3</div>
-      <div id="button4" class="numberButton" onclick="selectNumber(4)">4</div>
-      <div id="button5" class="numberButton" onclick="selectNumber(5)">5</div>
-      <div id="button6" class="numberButton" onclick="selectNumber(6)">6</div>
-      <div id="button7" class="numberButton" onclick="selectNumber(7)">7</div>
-      <div id="button8" class="numberButton" onclick="selectNumber(8)">8</div>
-      <div id="button9" class="numberButton" onclick="selectNumber(9)">9</div>
-    </div>
+    <div id="numbersWrapper" class=""></div>
     <div id="diceWrapper" class="wrapper">
       <div id="dice1" class="dice" onclick="debugVals()">–</div>
       <div id="dice2" class="dice" onclick="checkSolutions()">–</div>
