--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
         <div>(space bar)</div>
       </div>
       <div id="numTilesButton" class="button">
-        <div class="numTilesArrow" onclick="changeNumTiles(1)">^</div>
+        <!-- <div class="numTilesArrow" onclick="changeNumTiles(1)">^</div> -->
+        <img src="icons/up_arrow.png" class="numTilesArrow" onclick="changeNumTiles(1)">
         <div id="numTilesDisplay"></div>
-        <div class="numTilesArrow" onclick="changeNumTiles(-1)">v</div>
+        <!-- <div class="numTilesArrow" onclick="changeNumTiles(-1)">v</div> -->
+        <img src="icons/down_arrow.png" class="numTilesArrow" onclick="changeNumTiles(-1)">
       </div>
       <div id="newGameButton" class="button rawButton" onclick="newGame()">
         <div>New Game</div>
